--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Vin Sent Bon</title>
+</head>
+<body>
+    <ul>
+        <li>poutine
+            <ul>
+            <li>Patate</li>
+            <li>Fromage</li>
+            <li>Sauce</li>
+            <li>Sel</li>
+            </ul>
+        </li>
+        <li>Pancake
+            <ul>
+            <li>Pancake</li>
+            <li>Sucre en poudre</li>
+        </ul>
+        </li>
+    </ul>
+</body>
+</html>
