--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <ul>
-        <li>poutine
+        <li>Poutine
             <ul>
-            <li>Patate</li>
-            <li>Fromage</li>
-            <li>Sauce</li>
-            <li>Sel</li>
+              <li>Patate</li>
+              <li>Fromage</li>
+              <li>Sauce</li>
+              <li>Sel</li>
             </ul>
         </li>
         <li>Pancake
             <ul>
-            <li>Pancake</li>
-            <li>Sucre en poudre</li>
-        </ul>
+             <li>Pancake</li>
+             <li>Sucre en poudre</li>
+            </ul>
         </li>
     </ul>
 </body>
