--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
              <li>Sucre en poudre</li>
             </ul>
         </li>
+        <li>Gruau
+            <ul>
+                <li>Gruau</li>
+                <li>Baies</li>
+            </ul>
+        </li>
     </ul>
 </body>
 </html>
