intégration d'élément manqué

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <ul>
             <li>Pancake</li>
             <li>Sucre en poudre</li>
+            <li>Sauce tomate</li>
+            <li>Parmesan</li>
         </ul>
         </li>
         <li>Gruau
