--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li>poutine
+        <li>Grosse marmite de patate
             <ul>
             <li>Patate</li>
             <li>Fromage</li>
